2006-01-30 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* profiles/lfs-6.1/*: Fixed various bugs found in testing.

2006-01-29 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* scripts/pkginstall.in: Don't run cleanup_failed on "virtual"
	  packages.
	* scripts/pkgadd.in: Fixed removal of build directories so that rm
	  does not prompt anymore when it encounters r/o files.

2006-01-28 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* scripts/libprometheus.bash.in: Fixed `drop_privileges' so that it
	  only actually does something if the `su' command is available instead
	  of failing. (This makes the build script work again)
	* profiles/lfs-6.1/expect: Fixed wrong `directory' value.
	* Makefile.defs: Fixed permissions of directories within the
	  prometheus user's home directory.
	* Makefile: Fixed some syntax errors.  Fixed useradd command for the
	  promtheus user: the login shell has to be a real shell.
	* profiles/lfs-6.1/man-pages: Added a missing quote.

2006-01-28 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/stringlist.h, reroot/libreroot/tokenizer.h: Added.

	* reroot/*: Removed `until' define, removed get_ prefix from function
	  names.

2006-01-23 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* profiles/lfs-6.1/glibc, profiles/lfs-6.1/flex, profiles/lfs-6.1/perl:
	  Fixed profile errors.

2006-01-22 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/message.cc, reroot/libreroot/packet.cc: Clarified
	  meaning of sender PID field in describe functions.

2006-01-21 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/ => oldreroot: Renamed to make room for new reroot.

	* reroot/libreroot: Added reroot IPC library.
	* reroot/reroot: Reserved for reroot.so, currently empty.
	* reroot/rerootctl: Added reroot daemon control program.
	* reroot/rerootd: Added simplified reroot daemon.

2006-01-03 Oliver Brakmann <oliverbrakmann@users.berlios.de>
