@@ -26,39 +26,33 @@
 # include <list>
 # include <string>
 
-# include "libreroot"
+# include "libreroot.h"
 
 namespace reroot
 {
-	typedef std::list <std::string> StringListBase;
 	class StringList;
 }
 
 class reroot::StringList:
-	private StringListBase
+	public std::list <std::string>
 {
 public:
-	// List iterator.
-	typedef StringListBase::const_iterator Iterator;
-
-	// C'tor.
-	StringList ();
-
-	// List access.
-	Iterator begin () const;
-	Iterator end () const;
-	void push_front (std::string const &string);
-	void push_back (std::string const &string);
-	void pop_front ();
-	void pop_back ();
-	void clear ();
-	using StringListBase::empty;
-	using StringListBase::size;
+	// For splitting a string & appending the components.
+	void append_string (std::string const &str, char delim = '/');
+	void append_filename (std::string const &str, char delim = '/');
 
 	// For getting the whole string.
-	std::string::size_type length (bool prefix = true) const;
-	void get_string (std::string &str, char delim = '/', bool prefix = true)
-		const;
+	void get_string (std::string &str, char delim = '/') const;
+	void get_filename (std::string &str, char delim = '/') const;
 };
+
+// Concatenate the strings in the list with single char deliminators, without
+// prefix.
+inline void reroot::StringList::get_string (std::string &str, char const delim)
+	const
+{
+	get_filename (str, delim);
+	str.erase (0, 1);
+}
 
 #endif
